@@ -454,6 +454,7 @@ proc addCookit { { optional 0 } } {
     addFile [file join $::cookitLibDirectory cookit-stats.tcl] "" $dst
     addFile [file join $::cookitLibDirectory cookit-console.tcl] "" $dst
     addFile [file join $::cookitLibDirectory cookit-builtin.tcl] "" $dst
+    addFile [file join $::cookitLibDirectory cookit-install.tcl] "" $dst
     addFile [file join $::cookitLibDirectory wzipvfs.tcl] "" $dst
 
     load {} Cookfs
